# worldquant-miner

./: FIX_RELEASE.md  GITHUB_ACTIONS_WORKFLOW.md  QUICK_RELEASE.md  RELEASE.md  RELEASE_ASSETS_EXPLANATION.md  RELEASE_SCRIPT_USAGE.md  create_release.ps1  create_release.sh  release.ps1  release.sh
.github/workflows/: release.yml
generation_two/: build.py  pyproject.toml  setup.py
